Fix ugly underline style
Default underline style is too thick, too high and too ugly.
Especially Chrome's 'interrupted underline' is totally ugly.
https://www.google.com/search?q=chrome+interrupted+underline&newwindow=1
https://www.google.com/search?q=chrome+ugly+underline&newwindow=1

See
https://developer.mozilla.org/en-US/docs/Web/CSS/text-decoration-thickness
and
https://developer.mozilla.org/en-US/docs/Web/CSS/text-underline-position

Also see
https://developer.mozilla.org/en-US/docs/Web/CSS/text-underline-offset
and
https://developer.mozilla.org/en-US/docs/Web/CSS/text-decoration-skip-ink
and others

--- a/_sass/minima/_base.scss
+++ b/_sass/minima/_base.scss
@@ -123,6 +123,8 @@ a {
   &:hover {
     color: $text-color;
     text-decoration: underline;
+    text-decoration-thickness: 1px;
+    text-underline-position: under;
   }
 
   .social-media-list &:hover {
@@ -130,6 +132,8 @@ a {
 
     .username {
       text-decoration: underline;
+      text-decoration-thickness: 1px;
+      text-underline-position: under;
     }
   }
 }
